# manelemax

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
res/: RCa26608  resource.h  resource.rc  version.rc
src/: auto_dj.cpp  auto_dj.hpp  com_ptr.hpp  cool_artists.hpp  keywords.hpp  main.cpp  raii_exec.hpp  string_utils.cpp  string_utils.hpp  system_media_properties_notifier.cpp  system_media_properties_notifier.hpp  systray_icon.cpp  systray_icon.h  systray_icon.hpp  volume_control.cpp  volume_control.hpp  win32_error.h  win32_error.hpp  window.cpp  window.h
